{
    "name": "MyPlayerControls",
    "maps": [
        {
            "name": "Game",
            "id": "d8062f88-5239-492f-b50a-e03c01e2dd8c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "66146696-7cb7-4308-850e-5aa14f57c002",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveCursor",
                    "type": "Value",
                    "id": "dde807c3-8f00-44f9-88e5-12e05d6a2d23",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Use Ability",
                    "type": "Button",
                    "id": "721ab003-a3f6-42f8-972a-365034f27825",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "0359461e-6e77-44c1-a47e-7a2bc476ba69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "74d7d182-097f-4bad-a8c1-7b42ef0eafa5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "25fe94c2-378c-4f96-985e-75af0066a897",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "49fcf1df-0e43-4716-9c79-83acf3c61428",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8caaec83-4d73-4928-bc41-dc4015aab446",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7f947642-1077-4889-8663-6713a92a3f31",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "01863ab5-fb8e-4874-bac7-3e2b1f71bcd8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9e2008f0-72cd-4c97-bb42-2431f221cdbf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee58f717-d122-4076-aac8-1364f5f2b5e4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bc71c3b6-c7d6-4f0f-8fa4-415ef244d03a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b742710-674a-4848-b001-0330aba087b2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5a80eb9f-270a-4039-8166-778808825751",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Xbox Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a33c1d07-ce1c-453f-8433-ca1a04b1e7d7",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Playstation Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26f80034-a033-4320-95ee-81291991e26f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "793fb92b-ca5c-46b2-a26a-1b916b8cf848",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Gamepad",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "295d22c2-a30b-4612-bcf7-24ec68d78e2d",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Playstation Gamepad",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "785db9be-4080-40a1-be35-6112867dac3f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Use Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d03d063e-9fbb-44bf-bf85-705131eb3df2",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Gamepad",
                    "action": "Use Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09542b51-97cd-4210-ad2e-2d835ca69f19",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Playstation Gamepad",
                    "action": "Use Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c2e8177-1492-4de1-ae12-4add5cae8b81",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1020f822-5d2f-4288-857b-410bd9113b60",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Gamepad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d314accb-8e47-41df-bfaa-bc9af93a8e87",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Playstation Gamepad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox Gamepad",
            "bindingGroup": "Xbox Gamepad",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Playstation Gamepad",
            "bindingGroup": "Playstation Gamepad",
            "devices": [
                {
                    "devicePath": "<DualSenseGamepadHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}